--- a/style.css
+++ b/style.css
@@ -14,12 +14,39 @@
 
 h2{
     font-family: 'Big Shoulders Display', sans-serif;
+    text-transform: uppercase;
+    font-size: 2.5rem;
+    color: var(--gray);
+    margin-block: 1.875rem;
 }
 
 p{
     font-family: 'Lexend Deca', sans-serif;
+    font-size: 0.9375rem;
+    color: var(--trasparent-white);
+    margin-bottom: 1.875rem;
 }
 
 a{
     font-family: 'Lexend Deca', sans-serif;
+}
+
+section{
+    padding: 3rem;
+}
+
+body{
+    padding: 5.5rem 1.5rem;
+}
+
+.sedans{
+    background: var(--orange);
+}
+
+.suvs{
+    background: var(--cyan);
+}
+
+.luxuosos{
+    background: var(--dark-cyan);
 }
